# discord-epistulus

./: .firebaserc  .gitignore  Cargo.toml  Dockerfile  build.py  build_config.json  firebase.json
.github/workflows/: deploy.yml
.idx/: dev.nix
deploy-py/: build_config.json  pyproject.toml
deploy-py/src/deploy_py/: __init__.py  cli.py  config_manager.py  gcloud_manager.py  gcp_manager.py  github_secrets.py  interactive_setup.py  project_detector.py
src/: feed_collector.rs  firestore.rs  main.rs  models.rs  notification.rs  payment.rs
src/commands/: mod.rs
