[package]
name = "discord_epitulus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }

# Axum 추가
axum = "0.8.4"

# (선택 사항) 정적 파일 서빙 또는 CORS 등을 위한 tower-http
# tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }

# (선택 사항) 로깅을 위한 tracing
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }