[package]
name = "discord_epistulus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.16", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6.1"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"

gcp_auth = "0.12.3"
firestore = "0.45.0"
google-cloud-default = "0.4.0"

# tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }

# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }