[project]
name = "deploy-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siyong Jang", email = "loldruger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.2",
    "google-auth>=2.40.2",
    "google-cloud-artifact-registry>=1.16.0",
    "google-cloud-iam>=2.19.0",
    "google-cloud-resource-manager>=1.14.2",
    "google-cloud-run>=0.10.18",
    "pynacl>=1.5.0",
    "requests>=2.32.3",
]

[project.scripts]
discord-epistulus-deploy = "deploy_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
